# MatchCake

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  main.py  naming_conventions.md  pennylane_sim.py  pyproject.toml  requirements.txt  run_pytests.py  setup.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build_dist.yml  coverage.yml  coverage_badge.yml  docs.yml  draft-joss.yml  publish.yml  tests.yml
benchmark/: benchmark_device_contraction.py  benchmark_opt_einsum.py  benchmark_pfaffian.py  benchmark_pipeline.py  benchmark_star_state_strategies.py  main.py  utils.py
benchmark/classification/: .gitignore  README.md  classification_pipeline.py  dataset_complexity.py  debug_main.py  digits_complexity.py  figures_script.py  kernels.py  main.py  main_synthetic_growth.py  requirements.txt  run_model_on_one_fold.py  utils.py
benchmark/complexity/: benchmark_pipeline.py  main.py  utils.py
docs/: .buildinfo  build_docs_pdf.py  expectation_values_theory.md  genindex.html  html_files_list.txt  index.html  matchcake.base.html  matchcake.circuits.html  matchcake.constants.html  matchcake.devices.contraction_strategies.html  matchcake.devices.expval_strategies.clifford_expval.html  matchcake.devices.expval_strategies.html  matchcake.devices.html  matchcake.devices.probability_strategies.html  matchcake.devices.sampling_strategies.html  matchcake.devices.star_state_finding_strategies.html  matchcake.html  matchcake.matchgate_parameter_sets.html  matchcake.ml.html  matchcake.ml.kernels.html  matchcake.ml.optimizer_strategies.html  matchcake.ml.parameters_initialisation_strategies.html  matchcake.ml.torch_models.html  matchcake.ml.visualisation.html  matchcake.observables.html  matchcake.operations.html  matchcake.operations.single_particle_transition_matrices.html  matchcake.templates.html  matchcake.typing.html  matchcake.utils.html  modules.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js  swap_injection_theory.md
docs/_pandoc/: number_equations.lua
docs/dev/: .buildinfo  genindex.html  index.html  matchcake.html  modules.html  py-modindex.html  readme.html  search.html  theory.html  tutorials.html
docs/main/: .buildinfo  genindex.html  index.html  matchcake.html  modules.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js  theory.html  tutorials.html
docs/sources/: matchcake.base.rst.txt  matchcake.circuits.rst.txt  matchcake.constants.rst.txt  matchcake.devices.contraction_strategies.rst.txt  matchcake.devices.expval_strategies.clifford_expval.rst.txt  matchcake.devices.expval_strategies.rst.txt  matchcake.devices.probability_strategies.rst.txt  matchcake.devices.rst.txt  matchcake.devices.sampling_strategies.rst.txt  matchcake.devices.star_state_finding_strategies.rst.txt  matchcake.matchgate_parameter_sets.rst.txt  matchcake.ml.kernels.rst.txt  matchcake.ml.optimizer_strategies.rst.txt  matchcake.ml.parameters_initialisation_strategies.rst.txt  matchcake.ml.rst.txt  matchcake.ml.torch_models.rst.txt  matchcake.ml.visualisation.rst.txt  matchcake.observables.rst.txt  matchcake.operations.rst.txt  matchcake.operations.single_particle_transition_matrices.rst.txt  matchcake.rst.txt  matchcake.templates.rst.txt  matchcake.typing.rst.txt  matchcake.utils.rst.txt  modules.rst.txt
images/logo/: Logo.drawio  logo_credits.txt
images/qcircuits/: PQC-variants.drawio
joss/: paper.bib  paper.md  word_count.py
joss/code_examples/: minimal_example_quantum_circuit_simulation.py  minimal_example_quantum_machine_learning.py
scratches/: batch_mps.py  convert.py  majoranas.py  matchgates_eqns.py  ops.py  pennylane_circuits.py  pennylane_pr.py  qml_about.py  single_gate_errors.py
sphinx/: clean_html_files.py  generate_doc.py  make_html_files_list.py
sphinx/source/: conf.py  index.rst  matchcake.rst  modules.rst  msim.rst  readme.rst  references.bib  theory.rst  tutorials.rst
src/matchcake/: __init__.py
src/msim/: __init__.py  lookup_table.py  matchgate.py  matchgate_operator.py  matchgate_parameter_sets.py  nif_device.py  qs_device.py  utils.py
temp-update-pennylane-playground/: qml-update.py
tests/: __init__.py  configs.py  conftest.py  test_logm.py  test_lookup_table.py  test_matchgate.py  test_matchgate_operation.py  test_matchgate_operator.py  test_matchgate_params.py  test_nif_device.py
tests/matchgate_params_set/: test_composed_hamiltonian_params_set.py  test_hamiltonian_coefficients_params_set.py  test_matchgate_params_set_with_torch_cuda.py  test_polar_params_set.py  test_shortest_transfer_to.py  test_standard_hamiltonian_params_set.py  test_standard_params_set.py  test_transfer_functions.py
tests/test_base/: test_lookup_table.py
tests/test_circuits/: test_random_generator.py  test_random_matchgate_circuits.py  test_random_parametrize_circuit_generator.py  test_random_sptm_circuits.py
tests/test_constants/: test_matmul_direction_type.py
tests/test_devices/: __init__.py  test_device_utils.py  test_hamiltonian_expval.py  test_multiples_matchgate_circuit.py  test_nif_sample.py  test_simultaneous_measurements.py  test_single_matchgate_circuit.py
tests/test_matchgate_params_set/: test_hamiltonian_coefficients_params_set.py  test_standard_params_set.py
tests/test_ml/: test_cross_validation.py
tests/test_nif_device/: __init__.py  test_compute_probability_strategies.py  test_expectation_values_pauli_strings.py  test_hamiltonian_expval.py  test_initial_state.py  test_multiple_measurements_explicitit_sum.py  test_multiples_matchgate_circuit.py  test_neighbours_contraction.py  test_nif_sample.py  test_random_unitary_circuit.py  test_simultaneous_measurements.py  test_simultaneous_measurements_explicit_sum.py  test_single_line_matchgates_circuit.py  (+2 more)
tutorials/: expectation_values.ipynb  iris_classification.ipynb  large_dataset_kernel_classification.ipynb  matchcake_basics.ipynb  nystroem_kernel_approximation.ipynb
uml/: generate_uml.py
(+376 files in other folders)
