[project]
name = "matchcake"
version = "0.1.0"
description = ""
authors = [{ name = "Jérémie Gince", email = "gincejeremie@gmail.com" }]
requires-python = ">=3.10,<3.14"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy (>=1.23,<3.0.0)",
    "setuptools (>=65.5.1)",
    "scipy (>=1.11.4,<=2)",
    "matplotlib (>=3.8.0)",
    "networkx (>=3.1,<4.0)",
    "pythonbasictools (>=0.0.1a10)",
    "sympy (>=1.12,<2.0)",
    "tqdm (>=4.66.1)",
    "seaborn (>=0.13.0)",
    "scikit-learn (>=1.3.2)",
    "psutil (>=5.9.6)",
    "torch (>=2.1.2,<3.0.0)",
    "pylint (>=3.1.0)",
    "pennylane (>=0.39.0,<=0.41.1)",
    "pandas (>=2.1.0)",
    "pennylane-lightning (>=0.39.0,<=0.41.1)",
    "torchpfaffian (>=0.0.0)",
    "opt-einsum (>=3.4.0)",
    "importlib-metadata (>=8.7.0,<9.0.0)",
]
dynamic = ["readme"]

[project.urls]
homepage = "https://github.com/MatchCake/MatchCake"
Documentation = "https://github.com/MatchCake/MatchCake"
Source = "https://MatchCake.github.io/MatchCake"

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]

[dependency-groups]
dev = [
    "pytest-cov>=6.1.1,<7",
    "pytest-json-report>=1.5.0,<2",
    "pytest>=8.3.5,<9",
    "docutils>=0.18.1,<0.20",
    "mypy>=1.15.0,<2",
    "black>=25.1.0,<26",
    "nbmake>=1.5.5,<2",
    "wheel>=0.45.1,<0.46",
    "build>=1.2.2.post1,<2",
    "twine>=6.1.0,<7",
    "pytest-xdist>=3.7.0,<4",
    "isort>=6.0.1,<7",
    "pytest-timeout>=2.4.0",
    "pip>=25.3",
]
docs = [
    "wheel>=0.45.1,<0.46",
    "build>=1.2.2.post1,<2",
    "twine>=6.1.0,<7",
    "sphinx>=6.2.1,<6.3.0",
    "docutils>=0.18.1,<0.20",
    "sphinx-rtd-theme>=3.0.2,<4",
    "sphinxcontrib-bibtex>=2.5.0,<2.6.0",
    "sphinx-theme~=1.0",
    "groundwork-sphinx-theme>=1.1.1,<2",
    "karma-sphinx-theme>=0.0.8,<0.0.9",
    "sphinx-mdinclude>=0.6.2,<0.7",
]

[tool.uv]
default-groups = [
    "dev",
    "docs",
]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu128" },
    { extra = "cu130" },
  ],
]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
]

[project.optional-dependencies]
cpu = [
  "torch (>=2.1.2,<3.0.0)",
  "torchvision (>=0.21.0)",
]
cu128 = [
  "torch (>=2.1.2,<3.0.0)",
  "torchvision (>=0.21.0)",
]
cu130 = [
  "torch (>=2.1.2,<3.0.0)",
  "torchvision (>=0.22.0)",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
  { index = "pytorch-cu130", extra = "cu130" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
  { index = "pytorch-cu130", extra = "cu130" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[build-system]
requires = [
    "numpy (>=1.23,<3.0.0)",
    "setuptools>=57.0.0",
    "pytest>=7.4.2",
    "pytest-cov>=4.1.0",
    "scipy>=1.11.2",
    "wheel",
    "pythonbasictools>=0.0.1a10",
    "matplotlib>=3.8.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.report]
exclude_also = [
    'def __repr__',
    'if self.debug:',
    'if settings.DEBUG',
    'raise AssertionError',
    'raise NotImplementedError',
    'if __name__ == .__main__.:',
    'if TYPE_CHECKING:',
    '@(abc\.)?abstractmethod',
]

[tool.mypy]
# TODO: Remove all the exclude folders/files.
exclude = [
    # Package
    "base",
    "circuits",
    "constants",
    "devices",
    "matchgate_parameter_sets",
    "ml",
    "observables",
    "operations",
    "templates",
    "utils/__init__.py",
    "utils/constants",
    "utils/cuda",
    "utils/majorana",
    "utils/math",
    "utils/operators",
    "utils/torch_utils",
    "__init__.py",
    # Tests
    "tests/test_matchgate_params_set",
    "tests/test_ml",
    "tests/test_nif_device",
    "tests/test_operations",
    "tests/test_utils/test_orthonormalize.py",
    "tests/test_logm.py",
    "tests/test_lookup_table.py",
    "tests/test_matchgate.py",
    "tests/test_matchgate_operation.py",
]

[[tool.mypy.overrides]]
module = [
    # PennyLane
    "pennylane",
    "pennylane.wires",
    "pennylane.templates.broadcast",
    "pennylane.ops.qubit.observables",
    "pennylane.typing",
    "pennylane.operation",
    "pennylane.tape",
    "pennylane.pulse",
    "pennylane.measurements",
    "pennylane.ops",
    "pennylane.numpy",
    "pennylane.ops.op_math.linear_combination",
    "pennylane.math",
    # Scikit-learn
    "sklearn",
    "sklearn.base",
    "sklearn.utils.validation",
    "sklearn.utils.multiclass",
    "scipy",
    "scipy.optimize",
    "sklearn.utils.estimator_checks",
    # Scipy
    "scipy.linalg",
    # Seaborn
    "seaborn",
    # PythonBasicTools
    "pythonbasictools",
    "pythonbasictools.multiprocessing_tools",
    # Others
    "tqdm",
    "joblib",
    "psutil",
    "umap",
    "tensorflow",
    "jax.scipy.linalg",
    "pfapack.pfaffian",
    "torch_pfaffian",
    "sympy",
    "networkx",
    "opt_einsum",
]
ignore_missing_imports = true

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
