[project]
name = "matchcake"
version = "0.2.2"
description = ""
authors = [{ name = "Jérémie Gince", email = "gincejeremie@gmail.com" }]
requires-python = ">=3.11,<3.15"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy (>=1.23,<3.0.0)",
    "setuptools (>=80.10)",
    "scipy (>=1.11,<=2)",
    "matplotlib (>=3.8.0)",
    "networkx (>=3.1,<4.0)",
    "pythonbasictools (>=0.0.1a10)",
    "sympy (>=1.12,<2.0)",
    "tqdm (>=4.66.1)",
    "seaborn (>=0.13.0)",
    "scikit-learn (>=1.3.2)",
    "psutil (>=5.9)",
    "torch (>=2.1,<3.0.0)",
    "pylint (>=4.0)",
    "pennylane>=0.45.0",
    "pandas (>=2.1.0)",
    "pennylane-lightning (>=0.45.0)",
    "torchpfaffian (>=0.0.3)",
    "opt-einsum (>=3.4)",
    "importlib-metadata (>=8.7,<9.0)",
    "stim>=1.15",
    "autoray>=0.8",
    "array-api-compat>=1.13.0",
    "array-api-strict>=2.4.1",
]
dynamic = ["readme"]

[project.urls]
homepage = "https://github.com/MatchCake/MatchCake"
Documentation = "https://github.com/MatchCake/MatchCake"
Source = "https://MatchCake.github.io/MatchCake"

[tool.pytest.ini_options]
pythonpath = [
    ".", "src",
]
testpaths = ["tests"]
addopts = [
    "-n=auto",
    "--cov-branch",
    "--cov=src",
    '--cov-report=xml:tests/.tmp/coverage.xml',
    "--cov-report=term-missing",
    "--durations=10",
]
filterwarnings = [
    # Third-party warnings we cannot fix in this codebase:
    # autograd's tracer still calls ``__array_wrap__`` the old way under NumPy 2.0.
    "ignore:.*__array_wrap__.*:DeprecationWarning",
    # seaborn sets a degenerate xlim internally for single-category violin plots.
    "ignore:.*xlim.*:UserWarning",
]

[dependency-groups]
dev = [
    "pytest-cov>=6.1,<7",
    "pytest-json-report>=1.5,<2",
    "pytest>=8.4,<9",
    "docutils>=0.18,<0.20",
    "mypy>=1.15,<2",
    "ruff>=0.9,<1",
    "nbmake>=1.5,<2",
    "wheel>=0.45,<0.46",
    "build>=1.4,<2",
    "twine>=6.1,<7",
    "pytest-xdist>=3.7,<4",
    "pytest-timeout>=2.4",
    "pip>=25",
    "scipy-stubs>=1.15.3.0",
    "pandas-stubs>=2.3.3.260113",
    "pre-commit>=4.5.1",
]
docs = [
    "wheel>=0.45,<0.46",
    "build>=1.4,<2",
    "twine>=6.1,<7",
    "sphinx>=6.2,<6.3",
    "docutils>=0.18,<0.20",
    "sphinx-rtd-theme>=3.0,<4",
    "sphinxcontrib-bibtex>=2.5,<2.6",
    "sphinx-theme~=1.0",
    "groundwork-sphinx-theme>=1.1,<2",
    "karma-sphinx-theme>=0.0.8,<0.0.9",
    "sphinx-mdinclude>=0.6,<0.7",
    "nbsphinx>=0.9.8",
    "myst-parser>=3.0.1",
    "myst-nb>=1.4.0",
    "sphinx-multiversion>=0.2.4",
]

[tool.uv]
default-groups = [
    "dev",
    "docs",
]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cu128" },
        { extra = "cu130" },
        { extra = "cupy" },
    ],
]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
]

[project.optional-dependencies]
cpu = [
    "torch (>=2.1.2,<3.0.0)",
    "torchvision (>=0.21.0)",
]
cu128 = [
    "torch (>=2.1.2,<3.0.0)",
    "torchvision (>=0.21.0)",
]
cu130 = [
    "torch (>=2.1.2,<3.0.0)",
    "torchvision (>=0.22.0)",
]
cupy = [
    "cupy>=13.6.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "cu128" },
    { index = "pytorch-cu130", extra = "cu130" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "cu128" },
    { index = "pytorch-cu130", extra = "cu130" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[build-system]
requires = [
    "setuptools>=57.0.0",
    "wheel>=0.45.1,<0.46",
    "build>=1.2.2.post1,<2",
    "twine>=6.1.0,<7",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
readme = { file = "README.md", content-type = "text/markdown" }

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.report]
exclude_also = [
    'def __repr__',
    'if self.debug:',
    'if settings.DEBUG',
    'raise AssertionError',
    'raise NotImplementedError',
    'if __name__ == .__main__.:',
    'if TYPE_CHECKING:',
    '@(abc\.)?abstractmethod',
]

[[tool.mypy.overrides]]
module = [
    "pennylane.*",
    "sklearn.*",
    "seaborn.*",
    "pythonbasictools.*",
    "tqdm",
    "joblib",
    "psutil",
    "umap",
    "tensorflow",
    "jax.*",
    "torch_pfaffian",
    "sympy",
    "networkx",
    "opt_einsum",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
"sphinx/source/conf.py" = ["E402"]
"src/matchcake/base/lookup_table.py" = ["E501"]
"tutorials/**" = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.coverage.run]
relative_files = true
